# process-cloning

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.txt  Readme.md
1.NtCreateUserProcess/: CMakeLists.txt  NtCreateUserProcess.sln  NtCreateUserProcess.vcxproj  main.c
2.RtlCloneUserProcess/: CMakeLists.txt  RtlCloneUserProcess.sln  RtlCloneUserProcess.vcxproj  main.c
3.CloneAndMinidump/: CMakeLists.txt  CloneAndMinidump.rc  CloneAndMinidump.sln  CloneAndMinidump.vcxproj  main.c  resource.h
4.InspectClonedMemory/: CMakeLists.txt  InspectClonedMemory.rc  InspectClonedMemory.sln  InspectClonedMemory.vcxproj  main.c  resource.h
5.Library/: CMakeLists.txt  Example.sln  Example.vcxproj  Example.vcxproj.filters  example.c
